# finance_4_python

./: .gitignore  README.md  pyproject.toml
projeto/: main.py
projeto/src/app/: main.py
projeto/src/app/pages/: view.py
projeto/src/data/BR/ibov/: IBOVDia_22-09-23.csv
projeto/src/data/USA/: tickers.json
projeto/src/ingestao/: README.md
projeto/src/ingestao/crawler/: crawler.py  teste_.ipynb  tickets_USA.json
projeto/src/notebooks/: IFILDia_22-09-23.csv
projeto/src/notebooks/teste crawler/: teste_webcrawler.ipynb
projeto/src/notebooks/testes_code/: teste_request.ipynb
projeto/src/notebooks/view teste /: view.ipynb
projeto/src/utils/: keys.json
