[tool.poetry]
name = "finance-4-python"
version = "0.1.0"
description = "Study python applied for finance"
authors = ["cmatheusIA <cmatheusrm@alu.ufc.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
yfinance = "^0.2.28"
pandas = "^2.1.0"
plotly = "^5.17.0"
seaborn = "^0.12.2"
pandas-datareader = "^0.10.0"
mlrose = "^1.3.0"
scikit-learn = "^1.3.0"
scipy = "^1.11.2"
statsmodels = "^0.14.0"
pmdarima = "^2.0.3"
prophet = "^1.1.4"
spacy = "^3.6.1"
selenium = "^4.12.0"
nbformat = "^5.9.2"
investpy = "^1.0.8"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
